[metadata]
name = venture
version = 0.1.0
description = A small CLI text adventure
author = Your Name

[options]
package_dir =
    = src
packages = find:
install_requires =

[options.package_data]
venture = asciiLarge.txt, asciiMed.txt, asciiSmall.txt

[options.entry_points]
console_scripts =
    venture = venture.__main__:main
