[metadata]
name = venture
version = 0.1.2
description = A terminal-based RPG management game
author = OrkoTheMage
url = https://github.com/OrkoTheMage/venture
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =

[options.package_data]
venture = ascii/*.txt

[options.entry_points]
console_scripts =
    venture = venture.__main__:main
