[metadata]
name = venture
version = 0.1.3
description = A terminal-based RPG management game
author = OrkoTheMage
url = https://github.com/OrkoTheMage/venture
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    venture = src
packages =
    venture
    venture.logic
    venture.ui
    venture.utils
python_requires = >=3.10
install_requires =

[options.package_data]
venture = ascii/*.txt

[options.entry_points]
console_scripts =
    venture = venture.game:play
